--- a/resumeinfo.html
+++ b/resumeinfo.html
@@ -121,7 +121,7 @@ p.round3 {
 ________________________________________________________________________________________________________________________________________________________________________
 <p class= "round3" style= " line-height: 1.8;font-size: 20px; color: rgb(0, 0, 255);"> Professional Experience:
 <br>Entreprenuer 
-<br>Selling merchandise such as jewellery.
+<br>Selling merchandise such as jewelery.
 <br >Recording Sales.
 <br>Pricing items.</p>
 
